# internal/handler/handlers.go
@@ -148,11 +148,17 @@ func (h *Handlers) SystemInfo(w http.ResponseWriter, r *http.Request) {
 		"yt_dlp_version":  ytVersion,
 		"ffprobe":         ffprobe,
 		"capabilities": map[string]any{
+			"board_model":  caps.BoardModel,
 			"h264_hw":      caps.H264HW,
 			"hevc_hw":      caps.HEVCHW,
+			"h264_path":    caps.H264Path,
+			"hevc_path":    caps.HEVCPath,
+			"hw_type":      caps.HWTypeName,
 			"videotoolbox": caps.VideoToolbox,
 			"vaapi":        caps.VAAPI,
 			"v4l2":         caps.V4L2,
+			"v4l2_m2m":     caps.V4L2M2M,
+			"media":        caps.Media,
 			"drm":          caps.DRM,
 		},
 		"displays": displays,
